[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/debug/entity_inspector/EntityInspectorOverlay.gd" id="1"]
[ext_resource type="Script" path="res://tests/scripts/system_testbed/ComponentViewerPanel.gd" id="2"]

[node name="EntityInspectorOverlay" type="CanvasLayer"]
layer = 128
script = ExtResource("1")

[node name="OverlayRoot" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -420.0
offset_top = 24.0
offset_right = -24.0
size_flags_vertical = 3

[node name="InspectorPanel" type="PanelContainer" parent="OverlayRoot"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 520)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InspectorContent" type="VBoxContainer" parent="OverlayRoot/InspectorPanel"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="InspectorTitle" type="Label" parent="OverlayRoot/InspectorPanel/InspectorContent"]
unique_name_in_owner = true
text = "Entity Inspector"
theme_override_font_sizes/font_size = 20

[node name="InspectorSubtitle" type="Label" parent="OverlayRoot/InspectorPanel/InspectorContent"]
unique_name_in_owner = true
text = "Click an entity to inspect component data."
autowrap_mode = 3

[node name="InspectorSeparator" type="HSeparator" parent="OverlayRoot/InspectorPanel/InspectorContent"]

[node name="ComponentViewerPanel" type="PanelContainer" parent="OverlayRoot/InspectorPanel/InspectorContent"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")
auto_connect_to_system_testbed = false
read_only = true

[node name="ComponentViewerContent" type="VBoxContainer" parent="OverlayRoot/InspectorPanel/InspectorContent/ComponentViewerPanel"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ComponentViewerTitle" type="Label" parent="OverlayRoot/InspectorPanel/InspectorContent/ComponentViewerPanel/ComponentViewerContent"]
text = "Component Data"
theme_override_font_sizes/font_size = 18

[node name="ComponentViewerScroll" type="ScrollContainer" parent="OverlayRoot/InspectorPanel/InspectorContent/ComponentViewerPanel/ComponentViewerContent"]
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal = false

[node name="ComponentViewerBody" type="VBoxContainer" parent="OverlayRoot/InspectorPanel/InspectorContent/ComponentViewerPanel/ComponentViewerContent/ComponentViewerScroll"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ComponentViewerPlaceholder" type="Label" parent="OverlayRoot/InspectorPanel/InspectorContent/ComponentViewerPanel/ComponentViewerContent/ComponentViewerScroll/ComponentViewerBody"]
unique_name_in_owner = true
text = "Component data will appear here."
autowrap_mode = 3

